@@ -1,5 +1,14 @@
 2006-12-01  OHASHI Akira  <bg66@koka-in.org>
 
+	* mixi.el (mixi-topic-comment-list-page): Use `%d' instead of `all'.
+	(mixi-event-comment-list-page): Ditto.
+	(mixi-url-retrieve): Fix for `HTTP/1.0 500 Internal Server Error' of
+	BBS page.
+	(mixi-w3m-retrieve): Ditto.
+	(mixi-curl-retrieve): Ditto.
+
+2006-12-01  OHASHI Akira  <bg66@koka-in.org>
+
 	* mixi.el (mixi-parse-buffer): Rename from `mixi-retrieve-1', and
 	swap `buffer' argument and `url'.
 	(mixi-url-retrieve): Follow the change above.
